Update colors & fix dark mode styles

--- a/app/javascript/packs/app/application.scss
+++ b/app/javascript/packs/app/application.scss
@@ -78,7 +78,7 @@ code {
 }
 
 .dark {
-  code { @apply bg-gray-700 text-gray-400; }
+  code { @apply bg-gray-700 text-gray-300; }
 }
 
 pre:not(.ruby) {
